# asterix-libs

./: README.md  remarks.md  update-from-upstream.sh
.github/workflows/: periodic.yml  publish-haskell.yml  publish-python.yml  python-publish.yml  update.yml
code-generator/: .ghci  CHANGELOG.md  README.md  code-generator.cabal  default.nix
code-generator/other/: Paths_generator.hs
code-generator/src/: Fmt.hs  Main.hs  Struct.hs
code-generator/src/Language/: Haskell.hs  Python.hs
libs/haskell/: .ghci  .hlint.yaml  CHANGELOG.md  DEVEL.md  LICENSE  README.md  asterix-lib.cabal  asterix.cabal  default.nix  entangled.toml  libasterix.cabal  regenerate.sh  remarks.md
libs/haskell/readme-samples/: run-samples.sh
libs/haskell/src/: Alignment.hs  BitString.hs  Bits.hs  BitsBuilder.hs
libs/haskell/src/Asterix/: Base.hs  BitString.hs  Coding.hs  Generated.hs  Parsing.hs  RawDatablock.hs  Rx.hs  Safe.hs  Schema.hs
libs/haskell/src1/: Alignment.hs
libs/haskell/src1/Asterix/: Parsing.hs  Schema.hs
libs/haskell/src1/BitString/: Builder.hs
libs/haskell/src2/Asterix/: Base.hs  Generated.hs  Schema.hs  test.hs
libs/haskell/src3/Asterix/: Base.hs  Generated.hs  Schema.hs  test.hs  test1.hs  test2.hs  test3.hs
libs/haskell/test/: BenchBits.hs  Common.hs  Generated.hs  Main.hs  TestAsterix.hs  TestBits.hs  TestBytes.hs  TestCoding.hs  TestDatablock.hs  TestGeneric.hs  TestRawDatablock.hs  TestSpecific.hs
libs/python/: DEVEL.md  README.md  brei.toml  cat009-tx.py  default.nix  entangled.toml  mypy.ini  pyproject.toml  regenerate.sh  shell.nix
libs/python/examples/: meteo-to-cat008.md
libs/python/readme-samples/: run-samples.sh
libs/python/samples/: sample-invalid.py
libs/python/src/asterix/: base.py  generated.py  generatedtest.py
libs/python/tests/: generated.py  test_asterix.py  test_bitstring.py  test_mypy.py  test_raw_datablock.py  test_uaps.py
nix/: README.md  aspecs.json  reflection.nix  sources.json
nix/extra/: entangled-cli.nix
test-specs/: test-cat-000-1.0-basic.ast  test-cat-000-1.1-basic.ast  test-cat-001-1.0-multiple-uaps-with-selector.ast  test-cat-003-1.0-multiple-rfs.ast  test-cat-004-1.0-without-rfs.ast  test-cat-005-1.0-single-items.ast
