cabal-version:      3.0
name:               asterix-lib
version:            0.1.0
synopsis:           asterix data processing library
-- description:
homepage:           https://zoranbosnjak.github.io/asterix-libs/
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@sloveniacontrol.si
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common deps
    build-depends:
      base < 5
      , bytestring
      , text
      , transformers

common opts
    default-language: Haskell2010
    default-extensions:
        ApplicativeDo
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies
        TypeOperators

common warnings
    ghc-options: -Wall

library
    import:           deps, opts, warnings
    exposed-modules:
        Bits
        Asterix.Parsing
        Asterix.RawDatablock
        Asterix.Schema
        Asterix.Base
    -- other-modules:
    hs-source-dirs: src
    ghc-options:
        -O2 -funbox-strict-fields -threaded
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints

test-suite asterix-lib-test
    import:           deps, opts, warnings
    -- other-modules:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        asterix-lib
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-bench

benchmark bench-bytes
    import:           deps, opts, warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          BenchBytes.hs
    ghc-options:      "-with-rtsopts=-A32m"
    if impl(ghc >= 8.6)
        ghc-options: -fproc-alignment=64
    build-depends:
        asterix-lib
        , tasty-bench
