cabal-version:      3.0
name:               asterix-lib
version:            0.1.0
synopsis:           asterix data processing library
-- description:
homepage:           https://github.com/zoranbosnjak/asterix-libs
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@via.si
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common base
    default-language: GHC2021
    ghc-options:
        -O2 -funbox-strict-fields -threaded
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
    build-depends:
      base ^>=4.17.2.1
      , bytestring
      , text
      , transformers

library
    import:           base
    exposed-modules:
        Bits
        Asterix.Parsing
        Asterix.RawDatablock
        Asterix.Schema
        Asterix.Base
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

test-suite asterix-lib-test
    import:           base
    other-modules:
        TestBits
        TestDatablock
        TestSpecific
        TestGeneric
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        asterix-lib
        , tasty
        , tasty-quickcheck
        , tasty-hunit

benchmark bench-bits
    import:           base
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          BenchBits.hs
    ghc-options:      "-with-rtsopts=-A32m"
    if impl(ghc >= 8.6)
        ghc-options: -fproc-alignment=64
    build-depends:
        asterix-lib
        , tasty-bench
