cabal-version:      3.0
name:               asterix
version:            0.1.0
synopsis:           Asterix data processing library
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@via.si
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common base
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
        -Wunused-packages
        -Wpartial-fields
    default-language: GHC2021
    build-depends:
        base < 5
        , text
        , bytestring
        , transformers

library
    import:           base
    exposed-modules:
        Asterix.Base
        Asterix.Generated
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

test-suite asterix-test
    import:           base
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        asterix
        , tasty
        , tasty-quickcheck
        , tasty-hunit
        , tasty-bench

benchmark bench-bytes
    import:           base
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          BenchBytes.hs
    ghc-options:      "-with-rtsopts=-A32m"
    if impl(ghc >= 8.6)
        ghc-options: -fproc-alignment=64
    build-depends:
        asterix
        , tasty-bench
