cabal-version:      3.0
name:               libasterix
version:            0.11.0
synopsis:           Asterix data processing library
description:
    This library provides features to process asterix data format, including
    parsing, unparsing, constructing and manipulating asterix records.

    Asterix data format is a set of specifications, defined by Eurocontrol.
    It is mostly used for exchanging surveillance related information in air
    traffic control applications.

    For more details and tutorial see
    <https://github.com/zoranbosnjak/asterix-libs/tree/main/libs/haskell#readme the readme>.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@via.si
homepage:           https://github.com/zoranbosnjak/asterix-libs/tree/main/libs/haskell
bug-reports:        https://github.com/zoranbosnjak/asterix-libs/issues
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/zoranbosnjak/asterix-libs

common base
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
        -Wunused-packages
        -Wpartial-fields
    default-language: GHC2021
    build-depends:
        , base < 5

library
    import:           base
    exposed-modules:
        Asterix.Schema
        Asterix.BitString
        Asterix.Base
        Asterix.Generated
        Asterix.Coding
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    build-depends:
        , text ^>= 2.1.3
        , bytestring ^>= 0.12.2.0
        , base16-bytestring ^>= 1.0.2.0
        , transformers ^>= 0.6.1.1
        , containers ^>= 0.7

test-suite libasterix-test
    import:           base
    other-modules:
        Common
        Generated
        TestBits
        TestRawDatablock
        TestAsterix
        TestCoding
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        , libasterix
        , bytestring
        , tasty
        , tasty-quickcheck
        , tasty-hunit

